admission/validatingAdmissionPolicies/policies/windows-hostprocess/initcontainers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: windows-hostprocess-initcontainers-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a4d318d5-4d35-5139-9959-914d2b6054c3
  labels:
    pss.security.kolteq.com/warn: 'baseline,restricted'
    windows-hostprocess-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/audit: 'false,true'
    windows-hostprocess-initcontainers.security.kolteq.com/enforce: 'false,true'
spec:
  policyName: windows-hostprocess-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: windows-hostprocess-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: windows-hostprocess-initcontainers-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a4d318d5-4d35-5139-9959-914d2b6054c3
  labels:
    security.kolteq.com/warn: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/audit: 'false,true'
    windows-hostprocess-initcontainers.security.kolteq.com/enforce: 'false,true'
spec:
  policyName: windows-hostprocess-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: windows-hostprocess-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: windows-hostprocess-initcontainers-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a4d318d5-4d35-5139-9959-914d2b6054c3
  labels:
    windows-hostprocess-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/audit: 'false,true'
    windows-hostprocess-initcontainers.security.kolteq.com/enforce: 'false,true'
spec:
  policyName: windows-hostprocess-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: windows-hostprocess-initcontainers.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: windows-hostprocess-initcontainers-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a4d318d5-4d35-5139-9959-914d2b6054c3
  labels:
    pss.security.kolteq.com/audit: 'baseline,restricted'
    windows-hostprocess-initcontainers.security.kolteq.com/audit: 'false,true'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/enforce: 'false,true'
    windows-hostprocess-initcontainers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: windows-hostprocess-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: windows-hostprocess-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: windows-hostprocess-initcontainers-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a4d318d5-4d35-5139-9959-914d2b6054c3
  labels:
    security.kolteq.com/audit: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/audit: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/enforce: 'false,true'
    windows-hostprocess-initcontainers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: windows-hostprocess-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: windows-hostprocess-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: windows-hostprocess-initcontainers-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a4d318d5-4d35-5139-9959-914d2b6054c3
  labels:
    windows-hostprocess-initcontainers.security.kolteq.com/audit: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/enforce: 'false,true'
    windows-hostprocess-initcontainers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: windows-hostprocess-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: windows-hostprocess-initcontainers.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: windows-hostprocess-initcontainers-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a4d318d5-4d35-5139-9959-914d2b6054c3
  labels:
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    windows-hostprocess-initcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/audit: 'false,true'
    windows-hostprocess-initcontainers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: windows-hostprocess-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: windows-hostprocess-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: windows-hostprocess-initcontainers-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a4d318d5-4d35-5139-9959-914d2b6054c3
  labels:
    security.kolteq.com/enforce: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/audit: 'false,true'
    windows-hostprocess-initcontainers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: windows-hostprocess-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: windows-hostprocess-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: windows-hostprocess-initcontainers-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: a4d318d5-4d35-5139-9959-914d2b6054c3
  labels:
    windows-hostprocess-initcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    windows-hostprocess-initcontainers.security.kolteq.com/audit: 'false,true'
    windows-hostprocess-initcontainers.security.kolteq.com/warn: 'false,true'
spec:
  policyName: windows-hostprocess-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: windows-hostprocess-initcontainers.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
